--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -15,13 +15,11 @@
   </thead>
 
   <tbody>
-    <% @clients.each do |client| %>
       <tr>
-        <td><%= link_to 'Show', client %></td>
-        <td><%= link_to 'Edit', edit_client_path(client) %></td>
-        <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', clients_path %></td>
+        <td><%= link_to 'Edit', edit_client_path(@client) %></td>
+        <%# <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td> %>
       </tr>
-    <% end %>
   </tbody>
 </table>
 
@@ -31,60 +29,46 @@
 
 
 <h3 style="text-align:center; color:purple;">Implement your client dashboard ideas below this line by working in the views/clients/index.html.erb file and found at http://localhost:3030/clients</h3>
-<%= simple_form_for @client, url: new_client_vertical_path do |f| %>
-  <%= f.error_notification %>
+<br>
 
-  <%= f.input :name %>
+<%# Client information form %>
+<div class="booyah-box text-center col-10 offset-1">
+  <%= simple_form_for clients_path(@client) do |f| %> 
+    <%= f.error_notification %>
+    <%= f.input :birthday %>
+    <%= f.input :injuries %>
+    <%= f.input :athletic_background %>
+    <%= f.input :goals %>
+    <%= f.input :workout_history %>
+    <%= f.button :submit, 'Submit your info', class: "btn-primary" %>
+    <%= f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary" %>
+  <% end %>
+</div>
+<br><br>
 
-  <%= f.input :email, input_html: { autocomplete: 'email' } %>
+<%# Checkin form %>
+<div class="booyah-box text-center col-10 offset-1">
+  <%= simple_form_for '#' do |f| %> 
+    <%= f.input :weight %>
+    <%= f.input :mood %>
+    <%= f.input :notes %>
+    <%= f.button :submit, 'Add Checkin', class: "btn-primary" %>
+    <%= f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary" %></i>
+  <% end %> 
+</div>
+<br><br>
 
-  <%= f.input :password, input_html: { autocomplete: 'current-password' } %>
-
-  <%= f.input :injuries %>
-
-  <%= f.input :athletic_background %>
-
-  <%= f.input :goals %>
-
-  <%= f.input :workout_history %>
-
-  <%= f.input :birthday %>
-
-  <%= f.button :submit, class: "btn-primary" %>
-  <%= f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary" %>
-<% end %>
-
-<%= simple_form_for @Client-Check-In do |f| %>
-<%= f.input :weight %>
-
-<%= f.input :mood %>
-
-<%= f.input :notes %>
-
-<%= f.input :date_time %>
-
-<%= f.input :notes %>
-
-  <%= f.button :submit, class: "btn-primary" %>
-  <%= f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary" %></i> Check-in
-<% end %>
-
-<%= simple_form_for @Add-Workout do |f| %>
-<%= f.input :exersize %>
-
-<%= f.input :sets %>
-
-<%= f.input :reps %>
-
-<%= f.input :weight %>
-
-<%= f.input :date_time %>
-
-<%= f.input :notes %>
-
-<%= f.input :workout_intensity, as: :range %>
-
-
-  <%= f.button :submit, class: "btn-primary" %>
-  <%= f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary" %></i> Add-workout
-<% end %>
+<%# Workout form %>
+<div class="booyah-box text-center col-10 offset-1">
+    <%= simple_form_for '#' do |f| %>
+    <%= f.input :exersize %>
+    <%= f.input :sets %>
+    <%= f.input :reps %>
+    <%= f.input :weight %>
+    <%= f.input :date_time %>
+    <%= f.input :notes %>
+    <%= f.input :workout_intensity, as: :range %>
+    <%= f.button :submit,'Add workout', class: "btn-primary" %>
+    <%= f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary" %></i>
+  <% end %>  
+</div>
