--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -1,8 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<div class="booyah-box col-10 offset-1 text-center">
-  <h1>Trainers Dashboard</h1>
-</div>
+<h1>Trainers</h1>
 
 <table>
   <thead>
@@ -23,22 +21,5 @@
 </table>
 
 <br>
-<%= link_to 'New Trainer', new_trainer_path %>
-<br>
 
-<!-- Trainer information form -->
-<div class="booyah-box col-10 offset-1 text-center">
-  <%= simple_form_for trainers_path(@trainer) do |f| %>
-    <%= f.error_notification %>
-    <%= f.input :bio %>
-    <%= f.input :location %>
-    <%= f.input :specialties %>
-    <%= f.input :started_training %>
-    <%= f.input :athletic_background %>
-    <%= f.input :certificate_id %>
-    <%= f.input :other_credentials %>
-    <%= f.button :submit, 'Add Trainer Info', class: "btn-primary" %>
-    <%= f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary" %>
-  <% end %>
-</div>
-<br>
+<%= link_to 'New Trainer', new_trainer_path %>
