--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,6 +24,8 @@
       <%= f.input :password_confirmation,
                   required: true,
                   input_html: { autocomplete: "new-password" } %>
+      <%= f.select :role, options_for_select(role_options), { prompt: 'Choose Role' }, required: true %>
+            <br><br>            
       <br>
     </div>
     <div class="form-actions">
