--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -78,7 +78,7 @@ img {
 }
 
 .btn-start {
-  color: grey;
+  color: rgb(248, 245, 245);
   background-color: #317da3;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   font-family: "Helvetica Neue", Helvetica;
@@ -141,6 +141,7 @@ html {
   height: 60px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
   background-color: grey;
+  margin: 1px;
 }
 
 
@@ -189,12 +190,16 @@ html {
   margin: 1% 1% 3% 1%;
  }
 
- .text1 {
+ .container {
    color: #317da3;
-   @include float-right;
  }
 
- .text2 {
-  color: #317da3;
-  @include float-left;
+ .span4 img {
+  margin-right: 6px;
+}
+.span4 .img-left {
+  float: left;
+}
+.span4 .img-right {
+  float: right;
 }
