--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -33,78 +33,73 @@
     </div>
   </div>
 
-
+<!-- This button is linked to learn more button at top of page via id -->
+  <div id="down">
+  <div class= "text-center">
+    <%= link_to "Get started today", new_user_registration_path, class: 'btn-lg btn btn-info' %>
+  </div>
+  <br>
   
- <!-- Signup Button -->
+ 
+
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0.alpha6/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0.alpha6/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+<!-- First Images Display -->
+<div class="container">
+  <br>
+  <br>
+  <div class="block">
+      <div class="row">
+        <div class="span4">
+          <img class="img-left w-50 p-3" src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"/>
+          <br>
+          <div class="content-heading"><h3>Manage Workouts</h3></div>
+          <br>
+          <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+        </div>
+      </div>
+      <br/>
+      <br>
+      <div class="row">
+        <div class="span4">
+          <img class="img-right w-50 p-3" src="https://images.unsplash.com/photo-1535743686920-55e4145369b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80"/>
+          <br>
+          <div class="content-heading"><h3>Connect with a Trainer</h3></div>
+          <br>
+          <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+        </div>
+      </div>
+      <br>
+      <br>
+      <div class="row">
+        <div class="span4">
+          <img class="img-left w-50 p-3" src="https://images.unsplash.com/photo-1517963628607-235ccdd5476c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80"/>
+          <br>
+          <div class="content-heading"><h3>Record Your Progress</h3></div>
+          <br>
+          <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+          <br>
+          <br>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  
+<!-- Signup Button -->
+<br>
 <div class="image col-10 offset-1">
   <%= link_to "Sign up", new_user_registration_path, class: 'btn-lg btn btn-warning button btn-block' %>
   <br />
   <br />
 </div>
 
-<!-- First Images Display -->
-<div class="Images Display">
-  <div class ="Group1">
-    <!-- 1st Picture Left -->
-    <div class="img1">
-      <img src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="pull-left mr-2">
-    </div>
-      <!-- 1st Description Right -->
-      <div class="text1">
-        <h3>Manage Workouts</h3>
-        <br />
-          <p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur.</p>
-      </div> 
-  </div>
-
-  <div class="Group2">
-    <!-- 2nd Picture Right -->
-    <div class="img2">
-      <img src="https://images.unsplash.com/photo-1535743686920-55e4145369b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" class="pull-right mr-2">
-    </div>
-       <!-- 2nd Description Left -->
-      <div class="text2">
-        <h3>Connect with a Trainer</h3>
-        <br />
-          <p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur.</p>
-      </div>
-  </div>
-      
-  <div class="Group3">
-    <!-- 3rd Picture Left -->
-    <div class="img3">
-      <img src="https://images.unsplash.com/photo-1517963628607-235ccdd5476c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80" class="pull-left mr-2">
-    </div>
-      <!-- 3rd Description Right -->
-      <div class="text1">
-        <h3>Record Your Progress</h3>
-        <br />
-          <p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur.</p>
-      </div>
-        <br>
-    </div>
-  </div>
   
-
-  <!-- This button is linked to learn more button at top of page via id -->
-  <div id="down">
-    <%= link_to "Get started today", new_user_registration_path, class: 'btn-lg btn btn-warning button' %>
-  </div>
-  <br>
 
     <img src="https://images.unsplash.com/photo-1506197061617-7f5c0b093236?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2610&q=80">
     <img src="https://images.unsplash.com/photo-1522898467493-49726bf28798?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80">
+  <br>
   <br>
 </div>
