--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
       <%= f.input :username,
                   required: true,
                   autofocus: true,
-                  input_html: { autocomplete: "name" }%>
+                  input_html: { autocomplete: "username" }%>
       <%= f.input :password,
                   required: true,
                   hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
@@ -24,9 +24,8 @@
       <%= f.input :password_confirmation,
                   required: true,
                   input_html: { autocomplete: "new-password" } %>
-      <%= f.select :role, options_for_select(role_options), { prompt: 'Choose Role' }, required: true %>
-            <br><br>            
-      <br>
+     <%= f.input :role, as: :radio_buttons, collection: [['client', 'Member'], ['trainer', 'Trainer']], label_method: :second, value_method: :first, required: true %>
+     <br>
     </div>
     <div class="form-actions">
       <%= f.button :submit, "Sign up" %>
