--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,9 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav text-right">
           
-          <% if user_signed_in? %>
+          <% if current_user.role = "client" %>
             <li class="nav-item">
-              <%= link_to 'My Dashboard', dashboard_path, class: 'nav-link' %>
+              <%= link_to 'My Dashboard', clients_path, class: 'nav-link' %>
             </li>
             <li class="nav-item">
               <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
