--- a/app/views/trainers/_form.html.erb
+++ b/app/views/trainers/_form.html.erb
@@ -2,8 +2,23 @@
 <%= simple_form_for(@trainer) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
-  <div class="form-inputs">
+	
+	<div class="booyah-box text-center col-10 offset-1">
+  	<div class="form-inputs">
+		  <%= simple_form_for trainers_path(@trainer) do |f| %> 
+		    <%= f.error_notification %>
+		    <%= f.input :athletic_background %>
+		    <%= f.input :started_training %>
+		    <%= f.input :specialties %>
+		    <%= f.input :bio %>
+		    <%= f.input :availability %>
+		    <%= f.input :location %>
+		    <%= f.input :certificate_id %>
+		    <%= f.input :other_credentials %>
+		    <%= f.button :submit, 'Submit your info', class: "btn-primary" %>
+		    <%= f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary" %>
+		  <% end %>
+		</div>
   </div>
 
   <div class="form-actions">
