--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Client</h1>
+<h4>Editing Member Dash</h4>
 
-<%= render 'form', client: @client %>
+<%= render :partial => 'form', client: @client %>
 
 <%= link_to 'Show', @client %> |
 <%= link_to 'Back', clients_path %>
