--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -15,7 +15,7 @@
       </div>
     </div>
     <br />
-  </div>
+</div>
 
     <!--First 3 Feature Box -->
   <div class="row feature text-center col-12 offset-1">
@@ -97,9 +97,10 @@
 
   
   <div class="image">
-    <img src="https://images.unsplash.com/photo-1506197061617-7f5c0b093236?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2610&q=80">
-    <img src="https://images.unsplash.com/photo-1522898467493-49726bf28798?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80">
+    <img class="w-60 p-4" src="https://images.unsplash.com/photo-1522898467493-49726bf28798?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80">
+    <br>
   </div>
-  <br>
-  <br>
-</div>
+
+
+<br>
+<br>
